--- a/Dame/.classpath
+++ b/Dame/.classpath
@@ -3,10 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/home/informatik/git/inf2B1_Dame/Dame/Bibliotheken/itextpdf-5.5.0.jar" sourcepath="/home/informatik/git/inf2B1_Dame/Dame/Bibliotheken/itextpdf-5.5.0-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/home/informatik/git/inf2B1_Dame/Dame/Bibliotheken/itextpdf-5.5.0-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="Bibliotheken/itextpdf-5.5.0.jar" sourcepath="Bibliotheken/itextpdf-5.5.0-sources.jar"/>
+	<classpathentry kind="lib" path="Bibliotheken/javax.mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
